--- a/TeamProject-4/my-react-app/index.html
+++ b/TeamProject-4/my-react-app/index.html
@@ -12,7 +12,7 @@
             rel="stylesheet"
         />
 
-        <title>Vite + React</title>
+        <title>CodeVerse</title>
     </head>
     <body>
         <div id="root"></div>
